--- a/index.html
+++ b/index.html
@@ -9,8 +9,16 @@
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
-    <main>
-      <section class="flex-container">
+    <main class="relative">
+      <div class="visual absolute">
+        <span class="background-gray">
+          <p><i class="fas fa-th"></i> Speaker View</p>
+        </span>
+        <span class="background-gray">
+          <i class="fas fa-expand-arrows-alt"></i>
+        </span>
+      </div>
+      <section class="flex-container container">
         <div class="card relative">
           <img src="https://picsum.photos/200/300" alt="img random">
           <p class="user absolute"><i class="fas fa-microphone-slash"></i>Pinco Pallo</p>
@@ -151,11 +159,66 @@
           <img src="https://picsum.photos/200/300" alt="img random">
           <p class="user absolute"><i class="fas fa-microphone-slash"></i>Pinco Pallo</p>
         </div>
-        
       </section>
     </main>
     <footer>
-
+      <section class="nav flex-container">
+        <div class="aside flex-container">
+          <div class="btn-large center">
+            <i class="fas fa-microphone"></i>
+            <i class="fas fa-chevron-up"></i>
+            <p>Mute</p>
+          </div>
+          <div class="btn-large">
+            <i class="fas fa-video"></i>
+            <i class="fas fa-chevron-up"></i>
+            <p>Stop Video</p>
+          </div>
+        </div>
+        <div class="center flex-container">
+          <div class="btn-large">
+            <i class="fas fa-user-plus"></i>
+            <p>Invite</p>
+          </div>
+          <div class="btn-large txt-center">
+            <i class="fas fa-user-friends"></i>
+            <p>Manage Participants</p>
+          </div>
+          <div class="btn-large">
+            <i class="fas fa-chart-bar"></i>
+            <p>Polling</p>
+          </div>
+          <div class="btn-large txt-center">
+            <i class="fas fa-share-square green"></i>
+            <p>Share Screen</p>
+          </div>
+          <div class="chevron"> 
+            <i class="fas fa-chevron-up"></i>
+          </div>
+          <div class="btn-large">
+            <i class="fas fa-comment"></i>
+            <p>Chat</p>
+          </div>
+          <div class="btn-large">
+            <i class="fas fa-record-vinyl"></i>
+            <p>Record</p>
+          </div>
+          <div class="btn-large txt-center">
+            <i class="fas fa-th-large"></i>
+            <p>Breakout Rooms</p>
+          </div>
+          <div class="btn-large">
+            <i class="fas fa-ellipsis-h"></i>
+            <p>Moore</p>
+          </div>
+        </div>
+        <div id="end"class="aside flex-container flex-center">
+          <div>
+            <p>End meeting</p>
+          </div>
+          </div>
+        </div>
+      </section>
     </footer>
     
   </body>
